syntax = "proto3";
package shentu.bounty.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/shentufoundation/shentu/x/bounty/types";

message Program {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string program_id = 1 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
  string name = 2 [(gogoproto.moretags) = "yaml:\"name\""];
  ProgramDetail detail = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"detail\""];
  string admin_address = 4 [(gogoproto.moretags) = "yaml:\"admin_address\""];
  repeated string member_accounts = 5 [(gogoproto.moretags) = "yaml:\"member_accounts\""];
  ProgramStatus status = 6 [(gogoproto.moretags) = "yaml:\"status\""];
}

message Finding {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string program_id = 1 [(gogoproto.moretags) = "yaml:\"program_id\""];
  string finding_id = 2 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
  string title = 3;
  FindingDetail detail = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"detail\""];
  string submitter_address = 5 [(gogoproto.moretags) = "yaml:\"submitter_address\""];
  google.protobuf.Timestamp create_time = 6
  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"create_time\""];
  FindingStatus status = 7 [(gogoproto.moretags) = "yaml:\"status\""];
  string finding_hash = 8 [(gogoproto.moretags) = "yaml:\"finding_hash\""];
}

enum SeverityLevel {
  option (gogoproto.goproto_enum_prefix) = false;

  SEVERITY_LEVEL_CRITICAL = 0 [(gogoproto.enumvalue_customname) = "SeverityLevelCritical"];
  SEVERITY_LEVEL_HIGH = 1 [(gogoproto.enumvalue_customname) = "SeverityLevelHigh"];
  SEVERITY_LEVEL_MEDIUM = 2 [(gogoproto.enumvalue_customname) = "SeverityLevelMedium"];
  SEVERITY_LEVEL_LOW = 3 [(gogoproto.enumvalue_customname) = "SeverityLevelLow"];
  SEVERITY_LEVEL_INFORMATIONAL = 4 [(gogoproto.enumvalue_customname) = "SeverityLevelInformational"];
}

enum FindingStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  FINDING_STATUS_REPORTED = 0 [(gogoproto.enumvalue_customname) = "FindingStatusReported"];
  FINDING_STATUS_PROPOSED = 1 [(gogoproto.enumvalue_customname) = "FindingStatusProposed"];
  FINDING_STATUS_ACTIVE = 2 [(gogoproto.enumvalue_customname) = "FindingStatusActive"];
  FINDING_STATUS_CONFIRMED = 3 [(gogoproto.enumvalue_customname) = "FindingStatusConfirmed"];
  FINDING_STATUS_PAID = 4 [(gogoproto.enumvalue_customname) = "FindingStatusPaid"];
  FINDING_STATUS_CLOSED = 5 [(gogoproto.enumvalue_customname) = "FindingStatusClosed"];
}

enum ProgramStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  PROGRAM_STATUS_INACTIVE = 0 [(gogoproto.enumvalue_customname) = "ProgramStatusInactive"];
  PROGRAM_STATUS_ACTIVE = 1 [(gogoproto.enumvalue_customname) = "ProgramStatusActive"];
  PROGRAM_STATUS_CLOSED = 2 [(gogoproto.enumvalue_customname) = "ProgramStatusClosed"];
}

// ProgramDetail defines a program detail.
message ProgramDetail {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string description = 1;
  string scope_rules = 2;
  string known_issues = 3;
  repeated BountyLevel bounty_levels = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"bounty_levels\""];
}

message BountyLevel {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  SeverityLevel severity_level = 1 [(gogoproto.moretags) = "yaml:\"severity_level\""];
  bool   poc = 2;
  cosmos.base.v1beta1.Coin min_bounty = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"min_bounty\""];
  cosmos.base.v1beta1.Coin max_bounty = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"max_bounty\""];
}

// FindingDetail defines a finding detail.
message FindingDetail {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string description = 1;
  string proof_of_concept = 2 [(gogoproto.moretags) = "yaml:\"proof_of_concept\""];
  repeated string program_targets = 3 [(gogoproto.moretags) = "yaml:\"program_targets\""];
  repeated string attachments = 4;
  SeverityLevel severity_level = 5 [(gogoproto.moretags) = "yaml:\"severity_level\""];
}